# kolab

./: .gitignore  LICENSE  README.md
.github/workflows/: build_and_test.yml
.run/: Backend _ Run.run.xml  Frontend _ Run.run.xml
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml  index.html
frontend/src/: application.rs  lib.rs  main.rs
frontend/src/circuit/: actor.rs  mod.rs  store.rs
frontend/src/circuit/components/: capacitor.rs  inductor.rs  mod.rs  resistor.rs
frontend/src/gui/: assets.rs  mod.rs  top_menu_bar.rs  workspace.rs
