[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.31", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
    "wayland",
] }
serde = { version = "1.0.217", features = ["derive"] }
egui = "0.31"
log = "0.4"
wasm-bindgen-futures = "0.4.50"
reqwest = "0.12.12"

[profile.release]
opt-level = 2